Bug 1983399 lib/softtoken/{sdb.c,sftkdbti.h}: Align sftkdb_known_attributes_size type r=rrelyea patch by nvinson234

sftkdb_known_attributes_size is defined with conflicting types. In /lib/softtoken/sdb.c it is defined as a 'const size_t'; whereas in lib/softtoken/sftkdbti.h it is defined as an 'unsigned int'. The correct type for sftkdb_known_attributes_size is size_t since its value is derived from the size of the sftkdb_known_attributes array.

Differential Revision: https://phabricator.services.mozilla.com/D261440

--HG--
extra : rebase_source : e234b04d1754b26d2b4e8b79978bd8403d85fa5e